--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/12/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>unknown, body found by fisherman near Lesbos (GR)</b><br>Source: TDN/NOB<br>
+Found dead: <b>11/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kondeca Dealmeda (man, 30)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>suicide, hanged himself in detention centre in Volkstedt (DE) out of fear of deportation; aka Mapasi Jeancy</b><br>Source: FR-SA/ADN/DPA/ProAsyl/ZAG<br>
 
 <br>
 
