--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kondeca Dealmeda (man, 30)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>suicide, hanged himself in detention centre in Volkstedt (DE) out of fear of deportation; aka Mapasi Jeancy</b><br>Source: FR-SA/ADN/DPA/ProAsyl/ZAG<br>
+Found dead: <b>20/10/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 16)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>killed in France trying to cross highway full of trucks heading to Great Britain</b><br>Source: CMS/EastAFRO<br>
 
 <br>
 
