--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/01/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Pieris</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in bus compartment near Vienna (AT)</b><br>Source: AsylkoordinationÖsterreich/SP<br>
+Found dead: <b>25/08/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 60)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>suicide, hanged himself in deportation centre in Frankfurt (DE)</b><br>Source: taz/ZAG<br>
 
 <br>
 
