--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/08/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 60)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>suicide, hanged himself in deportation centre in Frankfurt (DE)</b><br>Source: taz/ZAG<br>
+Found dead: <b>11/03/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Neisse River near Zittau (DE) close to Polish-German border</b><br>Source: ARI/BGS/ZAG<br>
 
 <br>
 
