--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/02/00</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (17 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in shipwreck near Canary Islands (ES)</b><br>Source: GARA<br>
+Found dead: <b>29/09/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, crushed under pallets in back of truck heading for Great Britain near Port of Calais (FR)</b><br>Source: Francetvinfo/France3/Passeurs d’hospitalités/AFP<br>
 
 <br>
 
