--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/08/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tau Zohrd (woman, 43)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>drowned after being thrown by traffickers into the Adriatic Sea near Italy</b><br>Source: Morgengr./IRR/MNS/ILM<br>
+Found dead: <b>31/03/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat drifting near El Hierro (ES)</b><br>Source: APDHA/ORF/MAG<br>
 
 <br>
 
