--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/04/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tatjana I. Kabakchieva</b><br>Region of origin: <b>Bulgaria</b><br>Cause of death: <b>drowned in the Oder River trying to cross border from Poland into Germany</b><br>Source: FFM/ND/Uckermark-Kurier/ZAG<br>
+Found dead: <b>22/04/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hamza Ben Hammadi (man, 21)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned in the Mediterranean Sea while trying to reach Europe, found in Aouled al-Mabrouk (TN)</b><br>Source: Ftcr/CPD/HNS<br>
 
 <br>
 
