--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/12/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in hospital after boat wrecked near Dakar (SN) while travelling to Canary Islands (ES)</b><br>Source: TmesM/IntHeraldTribune/USA Today/MNS/APDHA<br>
+Found dead: <b>26/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers near coast of Calabria (IT)</b><br>Source: LR/Migreurop/PICUM/FE<br>
 
 <br>
 
