--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/07/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nusrat Raza (woman, 22)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, set herself on fire in Bradford (GB) after losing asylum appeal</b><br>Source: YP/IRR<br>
+Found dead: <b>22/03/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned near Barbate (ES) after jumping overboard fearing police inspection</b><br>Source: SOS/Egin<br>
 
 <br>
 
