--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/03/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Seydina Moh. Mbaye (boy, 5)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>died of pulmonary embolism suffered on flight to have surgery in Strasbourg (FR) after consulate delayed visa</b><br>Source: Seneweb/Nouvel Obs<br>
+Found dead: <b>30/11/02</b><br>Number of person: <b>32</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after boat sank between Western Sahara and Canary Islands (ES)</b><br>Source: VK/AFP<br>
 
 <br>
 
