--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa, Senegal</b><br>Cause of death: <b>died at sea on way from Senegal to Canary Islands (ES) shortly before rescue operation</b><br>Source: EP/EXP/jW/ELM<br>
+Found dead: <b>05/03/06</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in shipwreck near Malta on way to Italy, having fled from Hal Far and Safi detention centres (MT)</b><br>Source: ST/NOB/Unipa<br>
 
 <br>
 
