--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/07/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead near Tarifa (ES), reportedly drowned trying to reach Spain</b><br>Source: MNS/VK<br>
+Found dead: <b>06/06/04</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 men)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>reportedly drowned when boat sank off Tunisian coast while travelling to Italy</b><br>Source: LS/ANSA<br>
 
 <br>
 
