--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/10/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 60)</b><br>Region of origin: <b>France</b><br>Cause of death: <b>suicide, set herself on fire in Paris (FR) to protest the deportation of her Armenian partner</b><br>Source: SP<br>
+Found dead: <b>16/04/17</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N. (1 child; 2 women; 4 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died at sea on way from Libya to Italy during a weekend of rescue operations; 8,500 people rescued</b><br>Source: IOM Italy/BBC<br>
 
 <br>
 
