--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/11/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>New Zealand</b><br>Cause of death: <b>fell from ferry in Harwich, Essex (GB) after immigration request was rejected</b><br>Source: The Standard/IRR<br>
+Found dead: <b>29/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nashreddine (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died in a fire caused by rebellion in detention centre in Seraino Vulpitta di Trapani (IT)</b><br>Source: CDS/taz/MUGAK/MP/ARCI/L.B.CPT/GdV/quibla<br>
 
 <br>
 
