--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/05/14</b><br>Number of person: <b>177</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>missing, presumed dead after boat carrying 400 migrants sank off coast of Libya; 17 bodies found</b><br>Source: BBC/LR/VK/DN/Aljazeera/Ya.N/UNHCR<br>
+Found dead: <b>Jun 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fahezeh Ahmadi (girl, 17)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stabbed by husband at her sister's house in Grua (NO) while she was on leave from Lyng refugee centre (NO)</b><br>Source: Klassekampen<br>
 
 <br>
 
