--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fahezeh Ahmadi (girl, 17)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stabbed by husband at her sister's house in Grua (NO) while she was on leave from Lyng refugee centre (NO)</b><br>Source: Klassekampen<br>
+Found dead: <b>22/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 34)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>died in hospital after police beat him at Kastrup airport (DK) because he refused deportation</b><br>Source: TheHuff/Vivre/ObsAlgerie<br>
 
 <br>
 
