--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/09/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 44)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>shot by Greek authorities near border with Macedonia</b><br>Source: MNS<br>
+Found dead: <b>17/08/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Eritrea</b><br>Cause of death: <b>died in La Valletta (MT) after rescue from dinghy travelling from Libya that had been at sea for 4 days</b><br>Source: FE/Ansamed/ PICUM/TimesM/MAS<br>
 
 <br>
 
