--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/05/17</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N. (7 children; 13 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat of 500 capsized off Libya, sending 200 into the sea</b><br>Source: DailyStar/USNews/Xinhua<br>
+Found dead: <b>31/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amed Agaj (man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in the Adriatic Sea when rubber boat travelling to Italy sank</b><br>Source: DPA/Morgengr./taz/VK/CDS/LS/TL<br>
 
 <br>
 
