--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amed Agaj (man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in the Adriatic Sea when rubber boat travelling to Italy sank</b><br>Source: DPA/Morgengr./taz/VK/CDS/LS/TL<br>
+Found dead: <b>15/09/17</b><br>Number of person: <b>97</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>9 died when ship from Sabratha (LY) ran out of fuel and sank; 88 missing, 35 rescued</b><br>Source: News24/VanguardNGR/USNews/IOM<br>
 
 <br>
 
