--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/09/17</b><br>Number of person: <b>97</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>9 died when ship from Sabratha (LY) ran out of fuel and sank; 88 missing, 35 rescued</b><br>Source: News24/VanguardNGR/USNews/IOM<br>
+Found dead: <b>15/02/18</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, bodies found on Andalouses beach, Bousfer, west of Oran (DZ)</b><br>Source: ElW/Réf/IOM<br>
 
 <br>
 
