--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Omar (man, 24)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>went missing after leaving village of Bethioua (DZ) and trying to cross the sea to reach Spain</b><br>Source: QUOTI/NOB<br>
+Found dead: <b>04/01/95</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 girls, 2, 4)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died in a fire at refugee centre in Zell im Wiesental (DE)</b><br>Source: Konkret/ZAG<br>
 
 <br>
 
