--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdullah Ahmed Maroof (man, 30)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>suicide, set himself on fire in his car in Stockton (GB) out of fear of being sent back to Iraq</b><br>Source: IRR<br>
+Found dead: <b>15/02/09</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 men)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after boat crashed into rocks and sank near coast of Lanzarote (ES)</b><br>Source: Can7/ABC/Publico/ELM/DiariodeNoticias/Deia/EP<br>
 
 <br>
 
