--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Georgy Petko (man, 37)</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>died in Portugal out of fear of being deported to Ukraine after authorities overruled court sentence</b><br>Source: PUB<br>
+Found dead: <b>01/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Artur Muradov (man, ±35)</b><br>Region of origin: <b>Azerbaijan</b><br>Cause of death: <b>suicide, hanged himself in psychiatric hospital in Mühlhausen (DE)</b><br>Source: ARI<br>
 
 <br>
 
