--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 33)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>died of heart attack while detained at Yarl’s Wood removal centre (GB)</b><br>Source: GuardianUn.<br>
+Found dead: <b>29/07/06</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly died of starvation on boat drifting off Lampedusa (IT); 14 survivors</b><br>Source: BBC/IPL/FE/LR/ST/MNS/NOB/Unipa<br>
 
 <br>
 
