--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/06/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Getenet Legese Yacob (man, 32)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>died after attempting to board moving train in Coquelles (FR)</b><br>Source: Parisien/GuardianUn./IBT<br>
+Found dead: <b>07/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shiraz Pir (man, 25)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself in Bristol (GB) after asylum claim was rejected</b><br>Source: NCADC/CARF/IRR/ERB/BBC<br>
 
 <br>
 
