--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Saliou Mballo (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>drowned after boat carrying passengers from Kolda region (SN) was shipwrecked off coast of Morocco</b><br>Source: Book:LosInvisiblesDeKolda/MUGAK/ELM/FE<br>
+Found dead: <b>30/07/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Carlos Requelme (man, 50)</b><br>Region of origin: <b>Chile</b><br>Cause of death: <b>suicide, hanged himself in prison in Livorno (IT) while waiting to stand trial</b><br>Source: RIS<br>
 
 <br>
 
