--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Enes Abdulrezzak (boy, 11)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>drowned when boat sunk in the Evros River on Turkish-Greek border; son of teacher fleeing crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
+Found dead: <b>27/01/16</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (1 girl; 1 boy; 2 women; 3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead near Kos (GR) after boat travelling from Turkey to Greece capsized</b><br>Source: BelT/Reu.<br>
 
 <br>
 
